hphp/test/zend/good/ext/gd/tests/imagejpeg_nullbyte_injection.php.skipif
<?php
$support = gd_info();
if (!isset($support['JPEG Support']) || $support['JPEG Support'] === false) {
	print 'skip jpeg support not available';
}
?>