hphp/test/zend/bad/ext/soap/tests/bugs/bug31422-win.php.skipif
<?php
if (substr(PHP_OS, 0, 3) != 'WIN') {
    die('skip not valid for non windows');
}
require_once('skipif.inc');
?>